tests/baselines/reference/cloduleTest1.errors.txt
cloduleTest1.ts(5,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== cloduleTest1.ts (1 errors) ====
      declare function $(selector: string): $;  
      interface $ {
          addClass(className: string): $;
      }
      module $ {
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface AjaxSettings {
        }
        export function ajax(options: AjaxSettings) { }
      }
      var it: $ = $('.foo').addClass('bar');
    